--- a/Flask-Forms-Lab/templates/home.html
+++ b/Flask-Forms-Lab/templates/home.html
@@ -12,14 +12,11 @@
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
 
 <ul id="myUL">
-  <li><a href="#">Adele</a></li>
-  <li><a href="#">Agnes</a></li>
-  <li><a href="#">Billy</a></li>
-  <li><a href="#">Bob</a></li>
-  <li><a href="#">Calvin</a></li>
-  <li><a href="#">Christina</a></li>
-  <li><a href="#">Cindy</a></li>
-  <li><a href="#">Loai</a></li>
+
+  {% for i in friends%}
+  <li><a href='https://www.google.com/search?q=+{{i}}'>{{i}}</a></li>
+  {%endfor%}
+
 </ul>
 
 <script>
